--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,8 @@
 [deps]
 ActionModels = "320cf53b-cc3b-4b34-9a10-0ecb113566a3"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 HierarchicalGaussianFiltering = "63d42c3e-681c-42be-892f-a47f35336a79"
+Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
