--- a/simulations/Project.toml
+++ b/simulations/Project.toml
@@ -1,10 +1,14 @@
 [deps]
 ActionModels = "320cf53b-cc3b-4b34-9a10-0ecb113566a3"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 HierarchicalGaussianFiltering = "63d42c3e-681c-42be-892f-a47f35336a79"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
